add index twig page

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -10,29 +10,29 @@
     <body>
         <h1>Welcome to To Do List</h1>
 
-        <p>Create a new category:</p>
+        <p>Create a new Cuisine:</p>
 
-        <form action='/categories' method='post'>
-            <label for='name'>Category name</label>
-            <input id='name' name='name' type='text'>
+        <form action='/cuisines' method='post'>
+            <label for='type'>Cuisine name</label>
+            <input id='type' name='type' type='text'>
 
-            <button type='submit'>Add category</button>
+            <button type='submit'>Add cuisine</button>
         </form>
 
-        {% if categories is not empty %}
-            <p>Here are all your categories:</p>
+        {% if cuisines is not empty %}
+            <p>Here are all your cuisines:</p>
             <ul>
-                {% for category in categories %}
-                    <li><a href="categories/{{ category.getId }}">{{ category.getName }}</a></li>
+                {% for cuisine in cuisines %}
+                    <li><a href="cuisines/{{ cuisine.getId }}">{{ cuisine.getType }}</a></li>
                 {% endfor %}
             </ul>
-            <p>There are no categories yet!</p>
+            <p>There are no cuisines yet!</p>
         {% endif %}
 
-        <form action='/delete_categories' method='post'>
+        <form action='/delete_cuisines' method='post'>
             <button type='submit'>Clear</button>
         </form>
-        <p><a href="/tasks">Click here</a> to see all of the tasks and to add a task.</p>
-        <p><a href="/total">Click here</a> to see all of the tasks and categories.</p>
+        <p><a href="/restaurants">Click here</a> to see all of the restaurants and to add a restaurant.</p>
+        <p><a href="/total">Click here</a> to see all of the restaurants and cuisines.</p>
     </body>
 </html>
