--- a/views/total.html.twig
+++ b/views/total.html.twig
@@ -9,13 +9,13 @@
     </head>
     <body>
         <body>
-        <h1>Total Jobs</h1>
-        {% for jobs in categories %}
-        <h1>{{ jobs.getName }}</h1>
-            {% for task in tasks %}
+        <h1>Total Restaurants and Cuisines</h1>
+        {% for cuisine in cuisines %}
+        <h1>{{ cuisine.getType }}</h1>
+            {% for restaurant in restaurants %}
             <ul>
-            {% if jobs.getId == task.getCategoryId %}
-                <li>{{ task.getDescription }} by {{ task.getDue }}</li>
+            {% if cuisine.getId == restaurant.getCuisineId %}
+                <li>{{ restaurant.getName }}</li>
             {% endif %}
             </ul>
             {% endfor %}
