break adding a restaurant

--- a/views/cuisines.html.twig
+++ b/views/cuisines.html.twig
@@ -9,42 +9,36 @@
     </head>
     <body>
         <body>
-        <h1>Restaurants</h1>
-
+        <h1>{{ cuisine.getType }}</h1>
 
         {% if restaurants is not empty %}
             <p>Here are all your restaurants:</p>
             <ul>
                 {% for restaurant in restaurants %}
-                    <li><a href="/restaurants/{{ restaurant.getId }}/edit">{{ restaurant.getName }} --
-                    {% for cuisine in cuisines %}
-                        {% if cuisine.getId == restaurant.getCuisineId %}
-                        <em>{{ cuisine.getType}}</em>
-                        {% endif %}
-                    {% endfor %}
-                    </a></li>
+                    <li>{{ restaurant.getName }}</li>
                 {% endfor %}
             </ul>
         {% endif %}
 
-        <!-- <form action='/restaurants' method='post'> -->
-            <!-- <label for='name'>Restaurant name</label>
-            <input id='name' name='name' type='text'>
+        <h4>Add a restaurant</h4>
+
+
+        <form action='/restaurants/{{ cuisine.getId }}' method='post'>
+            <!-- <input id="cuisine_id" name="cuisine_id" type="hidden" value="{{ cuisine.getId()}}"> -->
+            <label for='name'>Restaurant name</label>
+            <input id='name' name='name' type='text'></br>
             <label for='description'>Restaurant description</label>
-            <input id='description' name='description' type='text'>
+            <input id='description' name='description' type='text'></br>
             <label for='website'>Restaurant website</label>
-            <input id='website' name='website' type='text'>
+            <input id='website' name='website' type='text'></br>
             <label for='location'>Restaurant location</label>
-            <input id='location' name='location' type='text'>
+            <input id='location' name='location' type='text'></br>
             <label for='phone'>Restaurant phone</label>
             <input id='phone' name='phone' type='text'>
 
             <button type='submit'>Add restaurant</button>
-        </form> -->
-        <form action='/delete_restaurants' method='post'>
-            <button type='submit'>Clear</button>
         </form>
-        <p><a href='/restaurants/{{ restaurant.getId }}'>Edit Restaurants</a></p>
+        <p><a href="/cuisines/{{ cuisine.getId }}/edit">Edit this cuisine</a></p>
         <p><a href='/'>Home</a></p>
     </body>
 </html>
