--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -8,7 +8,7 @@
         <title></title>
     </head>
     <body>
-        <h1>Welcome to To Do List</h1>
+        <h1>Welcome to the Best Restaurants of the US!</h1>
 
         <p>Create a new Cuisine:</p>
 
@@ -23,7 +23,8 @@
             <p>Here are all your cuisines:</p>
             <ul>
                 {% for cuisine in cuisines %}
-                    <li><a href="cuisines/{{ cuisine.getId }}">{{ cuisine.getType }}</a></li>
+                <!-- MAYBE RENAME THIS URL? -->
+                    <li><a href="restaurants/{{ cuisine.getId }}">{{ cuisine.getType }}</a></li>
                 {% endfor %}
             </ul>
             <p>There are no cuisines yet!</p>
