--- a/views/restaurants.html.twig
+++ b/views/restaurants.html.twig
@@ -25,6 +25,8 @@
                     </a></li>
                 {% endfor %}
             </ul>
+        {% else %}
+            <p>Please Enter a Restaurant...</p>
         {% endif %}
 
         <!-- <form action='/restaurants' method='post'> -->
