--- a/views/restaurants.html.twig
+++ b/views/restaurants.html.twig
@@ -16,7 +16,7 @@
                 <p>Here are all your restaurants:</p>
                 <ul>
                     {% for restaurant in restaurants %}
-                        <li><a href="/restaurants/{{ restaurant.getId }}/edit">{{ restaurant.getName }} --
+                        <li><a href="/restaurants/{{ restaurant.getId }}/description">{{ restaurant.getName }} 
                         {% for cuisine in cuisines %}
                             {% if cuisine.getId == restaurant.getCuisineId %}
                             <em>{{ cuisine.getType}}</em>
@@ -29,25 +29,11 @@
                 <p>Please Enter a Restaurant...</p>
             {% endif %}
 
-            <!-- <form action='/restaurants' method='post'> -->
-                <!-- <label for='name'>Restaurant name</label>
-                <input id='name' name='name' type='text'>
-                <label for='description'>Restaurant description</label>
-                <input id='description' name='description' type='text'>
-                <label for='website'>Restaurant website</label>
-                <input id='website' name='website' type='text'>
-                <label for='location'>Restaurant location</label>
-                <input id='location' name='location' type='text'>
-                <label for='phone'>Restaurant phone</label>
-                <input id='phone' name='phone' type='text'>
-
-                <button type='submit'>Add restaurant</button>
-            </form> -->
-            <form action='/delete_restaurants' method='post'>
-                <button type='submit'>Clear</button>
-            </form>
-            <p><a href='/restaurants/{{ restaurant.getId }}'>Edit Restaurants</a></p>
             <p><a href='/'>Home</a></p>
+
+            <!-- <form action='/delete_restaurants' method='post'>
+                <button type='submit'>Clear</button>
+            </form> -->
         </div>
     </body>
 </html>
