--- a/views/restaurant_description.html.twig
+++ b/views/restaurant_description.html.twig
@@ -28,6 +28,9 @@
             <input name="_method" type="hidden" value="delete">
             <button type="submit">Delete Restaurant</button>
           </form>
+
+          <p><a href='/'>Home</a></p>
+
       </div>
   </body>
 </html>
